[UPDATE] code finish

--- a/exm_diag_NMT/index.html
+++ b/exm_diag_NMT/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Personas</h1>
     <br>
-    <button type="button" class="btn btn-success" style="color : white;">
+    <button type="button" id="buttonRegister" class="btn btn-success" style="color : white;"  data-bs-toggle="modal" data-bs-target="#getPerson">
         <i class="fa-solid fa-plus"></i>
     </button>
     <br>
